--- a/styles/styles.css
+++ b/styles/styles.css
@@ -194,6 +194,9 @@ li {
     background-color: #05386B;
     color: white;
     font-size: 20px;
+    height: 30px;
+    width: 160px;
+    text-align: start;
 }
 
 #tabs-priorities{
@@ -235,8 +238,7 @@ li {
 }
 
 .taskLine {
-    opacity: 0.7;
-    background-color: black;
+    background-color: rgb(0, 0, 0, 0.7);
     width: 100%;
     height: 100%;
 }
@@ -255,4 +257,25 @@ input[type=checkbox] {
     margin-left: 5px;
     margin-bottom: 0px;
     padding-top: 2px;
+}
+
+#taskSettings {
+    margin-right: 5px;
+}
+
+.taskSettingsContainer {
+    min-width: 500px;
+    position: absolute;
+    width: 800px;
+    height: 700px;
+    margin-left: 50px;
+    margin-top: -6px;
+    background-color: rgb(0, 0, 0, 0.7);
+    border: solid 2px black;
+    border-radius: 2px;
+}
+
+#taskSettingsPanel {
+    margin-top: 5px;
+    margin-left: 5px;
 }
